--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-popup",
+  "name": "bootstrap-small-popup",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://graphicskart.github.io/bootstrap-small-popup",
